# ITG-Quoridor

./: CMakeLists.txt  Makefile  README.md
include/: Board.h  Bot.h  ConfigReader.h  Controller.h  ErrorHandler.h  Game.h  GreatBoard.h  MoveChooser.h  Player.h  Tile.h  View.h  utility.h
src/: Board.cpp  Bot.cpp  Controller.cpp  ErrorHandler.cpp  Game.cpp  GreatBoard.cpp  Launcher.cpp  MoveChooser.cpp  Player.cpp  Tile.cpp  View.cpp  main.cpp
